mps.build: drop maxpermsize option, editor and templates