@@ -570,27 +570,22 @@ public class QueriesGenerated extends QueryProviderBase {
     return "-Xmx" + heapSize + "m";
   }
   public static Object propertyMacro_GetValue_10_21(final PropertyMacroContext _context) {
-    // 0 is the default value (not generated) 
-    int size = SPropertyOperations.getInteger(Sequence.fromIterable(SNodeOperations.ofConcept(SLinkOperations.getChildren(_context.getNode(), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x4df58c6f18f84a13L, 0x31292e1a60db57afL, "aspects")), MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect"))).first(), MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, 0x4e80d5b7ab57aaaL, "generationMaxPermSizeInMb"));
-    return "-XX:MaxPermSize=" + size + "m";
-  }
-  public static Object propertyMacro_GetValue_10_22(final PropertyMacroContext _context) {
     return SPropertyOperations.getString(_context.getNode(), MetaAdapterFactory.getProperty(0xceab519525ea4f22L, 0x9b92103b95ca8c0cL, 0x110396eaaa4L, 0x110396ec041L, "name"));
   }
-  public static Object propertyMacro_GetValue_10_23(final PropertyMacroContext _context) {
+  public static Object propertyMacro_GetValue_10_22(final PropertyMacroContext _context) {
     return "${" + SPropertyOperations.getString(_context.getNode(), MetaAdapterFactory.getProperty(0xceab519525ea4f22L, 0x9b92103b95ca8c0cL, 0x110396eaaa4L, 0x110396ec041L, "name")) + "}";
   }
-  public static Object propertyMacro_GetValue_10_24(final PropertyMacroContext _context) {
+  public static Object propertyMacro_GetValue_10_23(final PropertyMacroContext _context) {
     return SPropertyOperations.getString(SNodeOperations.cast(ListSequence.fromList(SLinkOperations.getChildren(_context.getNode(), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x4df58c6f18f84a13L, 0x31292e1a60db57afL, "aspects"))).findFirst(new IWhereFilter<SNode>() {
       public boolean accept(SNode it) {
         return SNodeOperations.isInstanceOf(it, MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect"));
       }
     }), MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect")), MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, 0x456c667fe7936bf8L, "excludes"));
   }
-  public static Object propertyMacro_GetValue_10_25(final PropertyMacroContext _context) {
+  public static Object propertyMacro_GetValue_10_24(final PropertyMacroContext _context) {
     return (String) BuildSourcePath__BehaviorDescriptor.getAntPath_id7ro1ZztyOh5.invoke(SLinkOperations.getTarget(_context.getNode(), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x1ff930b22643b0ffL, 0x1ff930b22643b100L, "path")), Context.defaultContext(_context));
   }
-  public static Object propertyMacro_GetValue_10_26(final PropertyMacroContext _context) {
+  public static Object propertyMacro_GetValue_10_25(final PropertyMacroContext _context) {
     return SPropertyOperations.getString(_context.getNode(), MetaAdapterFactory.getProperty(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x5830b38e16a0164cL, 0x5830b38e16a017bdL, "path"));
   }
   public static Object propertyMacro_GetValue_12_0(final PropertyMacroContext _context) {
@@ -980,9 +975,6 @@ public class QueriesGenerated extends QueryProviderBase {
     return (mpsAspect != null) && SPropertyOperations.getBoolean(SNodeOperations.cast(mpsAspect, MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect")), MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, 0x18cf12266aabddbfL, "testGeneration"));
   }
   public static boolean ifMacro_Condition_10_8(final IfMacroContext _context) {
-    return SPropertyOperations.getInteger(Sequence.fromIterable(SNodeOperations.ofConcept(SLinkOperations.getChildren(_context.getNode(), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x4df58c6f18f84a13L, 0x31292e1a60db57afL, "aspects")), MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect"))).first(), MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, 0x4e80d5b7ab57aaaL, "generationMaxPermSizeInMb")) != 0;
-  }
-  public static boolean ifMacro_Condition_10_9(final IfMacroContext _context) {
     SNode ba = ListSequence.fromList(SLinkOperations.getChildren(_context.getNode(), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x4df58c6f18f84a13L, 0x31292e1a60db57afL, "aspects"))).findFirst(new IWhereFilter<SNode>() {
       public boolean accept(SNode it) {
         return SNodeOperations.isInstanceOf(it, MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect"));
@@ -993,17 +985,17 @@ public class QueriesGenerated extends QueryProviderBase {
     }
     return isNotEmptyString(SPropertyOperations.getString(SNodeOperations.cast(ba, MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, "jetbrains.mps.build.mps.structure.BuildMpsAspect")), MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0x5a408fb8c80220a9L, 0x456c667fe7936bf8L, "excludes")));
   }
-  public static boolean ifMacro_Condition_10_10(final IfMacroContext _context) {
+  public static boolean ifMacro_Condition_10_9(final IfMacroContext _context) {
     return Sequence.fromIterable(((MPSModulesPartitioner) _context.getVariable("var:closure")).getExternal()).isNotEmpty();
   }
-  public static boolean ifMacro_Condition_10_11(final IfMacroContext _context) {
+  public static boolean ifMacro_Condition_10_10(final IfMacroContext _context) {
     return ListSequence.fromList(SLinkOperations.getChildren(SLinkOperations.getTarget(_context.getNode(), MetaAdapterFactory.getReferenceLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x5830b38e16a0164cL, 0x5830b38e16d823d3L, "project")), MetaAdapterFactory.getContainmentLink(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x4df58c6f18f84a13L, 0x5c3f3e2c1ce9ac70L, "plugins"))).findFirst(new IWhereFilter<SNode>() {
       public boolean accept(SNode it) {
         return Sequence.fromIterable(BuildPlugin__BehaviorDescriptor.getImportedLibraries_id3zFnP6MwWdL.invoke(it)).contains(BuildMPSPlugin__BehaviorDescriptor.getMpsLibrary_id3zFnP6MM9ge.invoke(SNodeOperations.asSConcept(MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0xc0bde9fc71699d9L, "jetbrains.mps.build.mps.structure.BuildMPSPlugin"))));
       }
     }) != null;
   }
-  public static boolean ifMacro_Condition_10_12(final IfMacroContext _context) {
+  public static boolean ifMacro_Condition_10_11(final IfMacroContext _context) {
     return ListSequence.fromList(((List<SNode>) _context.getVariable("var:dependency"))).isNotEmpty();
   }
   public static boolean ifMacro_Condition_17_0(final IfMacroContext _context) {
@@ -1384,7 +1376,7 @@ public class QueriesGenerated extends QueryProviderBase {
   public static Iterable<SNode> sourceNodesQuery_10_0(final SourceSubstituteMacroNodesContext _context) {
     return Sequence.fromIterable(Sequence.fromArray(((String[]) _context.getVariable("var:requiredPlugins")))).select(new ISelector<String, SNode>() {
       public SNode select(String it) {
-        return createGeneratorInternal_String_x583g4_a0a0a0a0em(it);
+        return createGeneratorInternal_String_x583g4_a0a0a0a0cm(it);
       }
     });
   }
@@ -1421,7 +1413,7 @@ public class QueriesGenerated extends QueryProviderBase {
   public static Iterable<SNode> sourceNodesQuery_10_5(final SourceSubstituteMacroNodesContext _context) {
     return Sequence.fromIterable(Sequence.fromArray(((String[]) _context.getVariable("var:requiredPlugins")))).select(new ISelector<String, SNode>() {
       public SNode select(String it) {
-        return createGeneratorInternal_String_x583g4_a0a0a0a0jm(it);
+        return createGeneratorInternal_String_x583g4_a0a0a0a0hm(it);
       }
     });
   }
@@ -1744,7 +1736,7 @@ public class QueriesGenerated extends QueryProviderBase {
     List<Tuples._2<SNode, String>> dependencies = new ProjectDependency(_context, _context.getNode()).collectDependencies().getDependencies();
     return ListSequence.fromList(dependencies).select(new ISelector<Tuples._2<SNode, String>, SNode>() {
       public SNode select(Tuples._2<SNode, String> it) {
-        return createGeneratorInternal_ProjectDependency_x583g4_a0a0a0a1a253(it._0(), it._1());
+        return createGeneratorInternal_ProjectDependency_x583g4_a0a0a0a1a053(it._0(), it._1());
       }
     }).toListSequence();
   }
@@ -2313,7 +2305,6 @@ public class QueriesGenerated extends QueryProviderBase {
     pvqMethods.put("8986357566212561514", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "lib"));
     pvqMethods.put("1374711517443210408", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "moduleFile.msd"));
     pvqMethods.put("8702237507672319033", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "-Xmx512m"));
-    pvqMethods.put("353547257301863278", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "-XX:MaxPermSize=64m"));
     pvqMethods.put("5002485985637417294", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "name"));
     pvqMethods.put("5002485985637417303", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "${propertyName}"));
     pvqMethods.put("7795397664372773538", new QueriesGenerated.PVQ(i++, MetaAdapterFactory.getProperty(0x479c7a8c02f943b5L, 0x9139d910cb22f298L, 0x5c842a42c54cfd1fL, 0x5c842a42c54cfd20L, "text"), "excludePattern"));
@@ -2584,72 +2575,70 @@ public class QueriesGenerated extends QueryProviderBase {
         case 105:
           return QueriesGenerated.propertyMacro_GetValue_10_25(ctx);
         case 106:
-          return QueriesGenerated.propertyMacro_GetValue_10_26(ctx);
-        case 107:
           return QueriesGenerated.propertyMacro_GetValue_12_0(ctx);
-        case 108:
+        case 107:
           return QueriesGenerated.propertyMacro_GetValue_12_1(ctx);
-        case 109:
+        case 108:
           return QueriesGenerated.propertyMacro_GetValue_12_2(ctx);
-        case 110:
+        case 109:
           return QueriesGenerated.propertyMacro_GetValue_13_0(ctx);
-        case 111:
+        case 110:
           return QueriesGenerated.propertyMacro_GetValue_13_1(ctx);
-        case 112:
+        case 111:
           return QueriesGenerated.propertyMacro_GetValue_13_2(ctx);
-        case 113:
+        case 112:
           return QueriesGenerated.propertyMacro_GetValue_13_3(ctx);
-        case 114:
+        case 113:
           return QueriesGenerated.propertyMacro_GetValue_14_0(ctx);
-        case 115:
+        case 114:
           return QueriesGenerated.propertyMacro_GetValue_14_1(ctx);
-        case 116:
+        case 115:
           return QueriesGenerated.propertyMacro_GetValue_17_0(ctx);
-        case 117:
+        case 116:
           return QueriesGenerated.propertyMacro_GetValue_17_1(ctx);
-        case 118:
+        case 117:
           return QueriesGenerated.propertyMacro_GetValue_17_2(ctx);
-        case 119:
+        case 118:
           return QueriesGenerated.propertyMacro_GetValue_17_3(ctx);
-        case 120:
+        case 119:
           return QueriesGenerated.propertyMacro_GetValue_17_4(ctx);
-        case 121:
+        case 120:
           return QueriesGenerated.propertyMacro_GetValue_17_5(ctx);
-        case 122:
+        case 121:
           return QueriesGenerated.propertyMacro_GetValue_17_6(ctx);
-        case 123:
+        case 122:
           return QueriesGenerated.propertyMacro_GetValue_17_7(ctx);
-        case 124:
+        case 123:
           return QueriesGenerated.propertyMacro_GetValue_17_8(ctx);
-        case 125:
+        case 124:
           return QueriesGenerated.propertyMacro_GetValue_17_9(ctx);
-        case 126:
+        case 125:
           return QueriesGenerated.propertyMacro_GetValue_17_10(ctx);
-        case 127:
+        case 126:
           return QueriesGenerated.propertyMacro_GetValue_17_11(ctx);
-        case 128:
+        case 127:
           return QueriesGenerated.propertyMacro_GetValue_17_12(ctx);
-        case 129:
+        case 128:
           return QueriesGenerated.propertyMacro_GetValue_17_13(ctx);
-        case 130:
+        case 129:
           return QueriesGenerated.propertyMacro_GetValue_17_14(ctx);
-        case 131:
+        case 130:
           return QueriesGenerated.propertyMacro_GetValue_17_15(ctx);
-        case 132:
+        case 131:
           return QueriesGenerated.propertyMacro_GetValue_17_16(ctx);
-        case 133:
+        case 132:
           return QueriesGenerated.propertyMacro_GetValue_17_17(ctx);
-        case 134:
+        case 133:
           return QueriesGenerated.propertyMacro_GetValue_17_18(ctx);
-        case 135:
+        case 134:
           return QueriesGenerated.propertyMacro_GetValue_18_0(ctx);
-        case 136:
+        case 135:
           return QueriesGenerated.propertyMacro_GetValue_18_1(ctx);
-        case 137:
+        case 136:
           return QueriesGenerated.propertyMacro_GetValue_18_2(ctx);
-        case 138:
+        case 137:
           return QueriesGenerated.propertyMacro_GetValue_19_0(ctx);
-        case 139:
+        case 138:
           return QueriesGenerated.propertyMacro_GetValue_19_1(ctx);
         default:
           throw new GenerationFailureException(String.format("Inconsistent QueriesGenerated: there's no method for query %s (key: #%d)", ctx.getTemplateReference(), methodKey));
@@ -2727,7 +2716,6 @@ public class QueriesGenerated extends QueryProviderBase {
     imcMethods.put("398731435601112750", new QueriesGenerated.IfMC(i++));
     imcMethods.put("6886349771916699397", new QueriesGenerated.IfMC(i++));
     imcMethods.put("1787667533297084980", new QueriesGenerated.IfMC(i++));
-    imcMethods.put("353547257301863302", new QueriesGenerated.IfMC(i++));
     imcMethods.put("5002485985634204064", new QueriesGenerated.IfMC(i++));
     imcMethods.put("3239569521490198040", new QueriesGenerated.IfMC(i++));
     imcMethods.put("4101476690146989261", new QueriesGenerated.IfMC(i++));
@@ -2898,12 +2886,10 @@ public class QueriesGenerated extends QueryProviderBase {
         case 71:
           return QueriesGenerated.ifMacro_Condition_10_11(ctx);
         case 72:
-          return QueriesGenerated.ifMacro_Condition_10_12(ctx);
-        case 73:
           return QueriesGenerated.ifMacro_Condition_17_0(ctx);
-        case 74:
+        case 73:
           return QueriesGenerated.ifMacro_Condition_17_1(ctx);
-        case 75:
+        case 74:
           return QueriesGenerated.ifMacro_Condition_19_0(ctx);
         default:
           throw new GenerationFailureException(String.format("Inconsistent QueriesGenerated: there's no condition method for if macro %s (key: #%d)", ctx.getTemplateReference(), methodKey));
@@ -3220,19 +3206,19 @@ public class QueriesGenerated extends QueryProviderBase {
       }
     }
   }
-  private static SNode createGeneratorInternal_String_x583g4_a0a0a0a0em(Object p0) {
+  private static SNode createGeneratorInternal_String_x583g4_a0a0a0a0cm(Object p0) {
     PersistenceFacade facade = PersistenceFacade.getInstance();
     SNode n1 = SModelUtil_new.instantiateConceptDeclaration(MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0xd94b027412f0824L, "jetbrains.mps.build.mps.structure.GeneratorInternal_String"), null, null, false);
     n1.setProperty(MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0xd94b027412f0824L, 0xd94b027412f0827L, "path"), p0 + "");
     return n1;
   }
-  private static SNode createGeneratorInternal_String_x583g4_a0a0a0a0jm(Object p0) {
+  private static SNode createGeneratorInternal_String_x583g4_a0a0a0a0hm(Object p0) {
     PersistenceFacade facade = PersistenceFacade.getInstance();
     SNode n1 = SModelUtil_new.instantiateConceptDeclaration(MetaAdapterFactory.getConcept(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0xd94b027412f0824L, "jetbrains.mps.build.mps.structure.GeneratorInternal_String"), null, null, false);
     n1.setProperty(MetaAdapterFactory.getProperty(0xcf935df46994e9cL, 0xa132fa109541cba3L, 0xd94b027412f0824L, 0xd94b027412f0827L, "path"), p0 + "");
     return n1;
   }
-  private static SNode createGeneratorInternal_ProjectDependency_x583g4_a0a0a0a1a253(SNode node0, Object p0) {
+  private static SNode createGeneratorInternal_ProjectDependency_x583g4_a0a0a0a1a053(SNode node0, Object p0) {
     PersistenceFacade facade = PersistenceFacade.getInstance();
     SNode n1 = SModelUtil_new.instantiateConceptDeclaration(MetaAdapterFactory.getConcept(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x5830b38e16a0164cL, "jetbrains.mps.build.structure.GeneratorInternal_ProjectDependency"), null, null, false);
     n1.setProperty(MetaAdapterFactory.getProperty(0x798100da4f0a421aL, 0xb99171f8c50ce5d2L, 0x5830b38e16a0164cL, 0x5830b38e16a017bdL, "path"), p0 + "");
